--- a/app/src/main/res/layout/fragment_feed_list.xml
+++ b/app/src/main/res/layout/fragment_feed_list.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/reddit_feed_swipe_to_refresh"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/reddit_feed_list"
-    android:name="com.silatsaktistudios.shreddit.view.FeedListFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    app:layoutManager="LinearLayoutManager"
-    tools:context=".view.FeedListFragment"
-    tools:listitem="@layout/fragment_feed_list_item" />
+    android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/reddit_feed_list"
+            android:name="com.silatsaktistudios.shreddit.view.FeedListFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            app:layoutManager="LinearLayoutManager"
+            tools:context=".view.FeedListFragment"
+            tools:listitem="@layout/fragment_feed_list_item" />
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
