--- a/app/src/main/res/layout/fragment_feed_list_item.xml
+++ b/app/src/main/res/layout/fragment_feed_list_item.xml
@@ -1,22 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:padding="16dp"
     android:orientation="horizontal">
 
+    <ImageView
+        android:id="@+id/list_item_image"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/ic_reddit"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/list_item_author"
+        android:layout_marginTop="16dp"
+        android:contentDescription="@string/list_item_image" />
+
     <TextView
-        android:id="@+id/item_number"
+        android:id="@+id/list_item_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="16dp"
+        android:maxLines="4"
+        android:textAppearance="?attr/textAppearanceListItem"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/list_item_message_count_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/list_item_image"
+        app:layout_constraintTop_toTopOf="@id/list_item_image"
+        tools:text="Title" />
+
+    <TextView
+        android:id="@+id/list_item_author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="4867"
+        tools:text="Author"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:textAppearance="?attr/textAppearanceListItem" />
 
     <TextView
-        android:id="@+id/content"
+        android:id="@+id/list_item_subreddit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="lkasdghflsgljgsadlfjgshjfgsajdfgj"
-        android:textAppearance="?attr/textAppearanceListItem" />
-</LinearLayout>
+        tools:text="Subreddit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textAppearance="?attr/textAppearanceListItem"/>
+
+    <ImageView
+        android:id="@+id/list_item_ups_icon"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/ic_file_upload_black_24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/list_item_image"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:contentDescription="@string/ups_icon" />
+
+    <TextView
+        android:id="@+id/list_item_ups_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="9999"
+        android:layout_marginStart="8dp"
+        android:textAppearance="?attr/textAppearanceListItem"
+        app:layout_constraintTop_toTopOf="@+id/list_item_ups_icon"
+        app:layout_constraintBottom_toBottomOf="@id/list_item_ups_icon"
+        app:layout_constraintStart_toEndOf="@id/list_item_ups_icon"/>
+
+    <ImageView
+        android:id="@+id/list_item_message_icon"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="8dp"
+        android:src="@drawable/ic_message_black_24dp"
+        app:layout_constraintEnd_toStartOf="@id/list_item_message_count_text"
+        app:layout_constraintTop_toTopOf="@+id/list_item_message_count_text"
+        android:contentDescription="@string/comments_icon" />
+
+    <TextView
+        android:id="@+id/list_item_message_count_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/list_item_ups_text"
+        tools:text="34" />
+</androidx.constraintlayout.widget.ConstraintLayout>
